加入文件上传功能模块

--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <!-- Le styles -->
     <link href="@Url.Content("~/Content/Bootstrap/css/bootstrap.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/Bootstrap/css/bootstrap-responsive.css")" rel="stylesheet" type="text/css" />
-
+    <!--[if lt IE 7]><link rel="stylesheet" href="~/Content/Bootstrap/css/bootstrap-ie6.min.css"><![endif]-->
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="/Content/Bootstrap/docs/assets/js/html5.js"></script>
