--- a/WebUI/Views/Shared/_NavTopBar.cshtml
+++ b/WebUI/Views/Shared/_NavTopBar.cshtml
@@ -16,7 +16,7 @@
             {
                 <ul class="nav">
                     <li class="active">@Html.ActionLink("首页", "Index", "Home")</li>
-                    <li>@Html.ActionLink("分享资料", "All", "Photo")</li>
+                    <li>@Html.ActionLink("分享资料", "Index", "UploadFile")</li>
                     <li>@Html.ActionLink("关系", "All", "Friend")</li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">更多 <b class="caret"></b></a>
